package com.pseudochaos.xpom;

public enum ExceptionHandlingPolicy {
    THROW
}
